chore: merge codex/agent-harness-baseline into release